methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:6: error: identifier expected but ')' found.
    for (i <- 1 to 3.){
                     ^